--- a/myst.yml
+++ b/myst.yml
@@ -1,29 +1,30 @@
 # See docs at: https://mystmd.org/guide/frontmatter
 version: 1
 project:
-  id: msa-em-change-this-to-repo-name-followed-by-the-number-1
-  title: Elemental Microscopy Quickstart
-  description: A minimal repository to be used as quickstart for the Elemental Microscopy journal.
-  short_title: EM Quickstart
+  id: msa-em-stem-transfer-of-information-1
+  title: STEM Transfer of Information
+  description: Analytical and numerical studies of transfer of information in phase contrast STEM techniques.
+  # short_title: EM Quickstart
   keywords:
-    - Keyword One
-    - Keyword Two
-    - Spell Out Acronyms
-  github: https://github.com/msa-em/change-this-to-repo-name
-  jupyter: true
+    - Scanning transmission electron microscopy
+    - Ptychography
+    - Differential phase contrast
+    - Contrast transfer functions
+  github: https://github.com/msa-em/stem-transfer-of-information
+  # jupyter: true
   #  jupyter:
   #    binder:
   #      url: https://y2j74k9mn0bz.curvenote.dev/services/binder/
   #      repo: msa-em/change-this-to-repo-name
-  #  jupyter:
-  #    server:
-  #      url: 'http://localhost:8888'
-  #      token: '512ac78f14e1141db1fac17e8b4099c1e5bc7d589518b38c'
+  jupyter:
+    server:
+      url: 'http://localhost:8888'
+      token: '512ac78f14e1141db1fac17e8b4099c1e5bc7d589518b38c'
   open_access: true
   license: CC-BY-4.0
   banner: banner.png
   thumbnail: thumbnail.webp
-  date: 2024-08-27
+  date: 2024-09-29
   history:
     submitted: 2023-08-27
     published: 2024-08-27
@@ -38,25 +39,25 @@ project:
   exclude:
     - README.md
   authors:
-    - id: cophus
-      name: Colin Ophus
+    - id: julie
+      name: Julie Marie Bekkevold
       corresponding: true
-      email: cophus@gmail.com
-      orcid: 0000-0003-2348-8558
+      email: bekkevoj@tcd.ie
+      orcid: 0000-0002-7591-0928
       affiliations:
-        - id: ncem
-          department: National Center for Electron Microscopy, Molecular Foundry
-          institution: Lawrence Berkeley National Laboratory
-          address: 1 Cyclotron Road, Berkeley, CA, USA, 94720
-          ror: 02jbv0t02
-      roles:
-        - Conceptualization
-        - Funding acquisition
-        - Project administration
-        - Supervision
-        - Visualization
-        - Writing - original draft
-    - id: garnavides
+        - id: tcd
+          department: School of Physics
+          institution: Trinity College Dublin
+          address: College Green, Dublin 2
+          ror: 02tyrky19
+      # roles:
+      #   - Conceptualization
+      #   - Funding acquisition
+      #   - Project administration
+      #   - Supervision
+      #   - Visualization
+      #   - Writing - original draft
+    - id: gvarnavides
       name: Georgios Varnavides
       email: gvarnavides@berkeley.edu
       orcid: 0000-0001-8338-3323
@@ -66,23 +67,23 @@ project:
           institution: University of California, Berkeley
           address: 468 Donner Lab, Berkeley, CA, USA, 94720
           ror: 01an7q238
-      roles:
-        - Conceptualization
-        - Software
-        - Validation
-        - Visualization
-        - Writing - original draft
-  funding:
-    - statement: We thank the Microscopy Society of America for sponsoring this project.
-      recipients:
-        - cophus
-        - garnavides
-    - statement: Work at the Molecular Foundry was supported by the Office of Science, Office of Basic Energy Sciences, of the U.S. Department of Energy under Contract No. DE-AC02-05CH11231.
-      id: DE-AC02-05CH11231
-      sources:
-        - name: Office of Science, Office of Basic Energy Sciences, of the U.S. Department of Energy
-      recipients:
-        - cophus
+      # roles:
+      #   - Conceptualization
+      #   - Software
+      #   - Validation
+      #   - Visualization
+      #   - Writing - original draft
+  # funding:
+  #   - statement: We thank the Microscopy Society of America for sponsoring this project.
+  #     recipients:
+  #       - cophus
+  #       - gvarnavides
+  #   - statement: Work at the Molecular Foundry was supported by the Office of Science, Office of Basic Energy Sciences, of the U.S. Department of Energy under Contract No. DE-AC02-05CH11231.
+  #     id: DE-AC02-05CH11231
+  #     sources:
+  #       - name: Office of Science, Office of Basic Energy Sciences, of the U.S. Department of Energy
+  #     recipients:
+  #       - cophus
   abbreviations:
     4D-STEM: four dimensional scanning transmission electron microscopy
     FFT: fast Fourier transform
@@ -90,5 +91,6 @@ project:
     HRTEM: high resolution transmission electron microscopy
     M&M: Microscopy and Microanalysis
     STEM: scanning transmission electron microscopy
+    DPC: differential phase contrast
 site:
   template: book-theme
