adding icom SSNR notebook

--- a/myst.yml
+++ b/myst.yml
@@ -11,15 +11,11 @@ project:
     - Differential phase contrast
     - Contrast transfer functions
   github: https://github.com/msa-em/stem-transfer-of-information
-  # jupyter: true
-  jupyter:
-    binder:
-      url: https://y2j74k9mn0bz.curvenote.dev/services/binder/
-      repo: msa-em/stem-transfer-of-information
-  # jupyter:
-  #   server:
-  #     url: 'http://localhost:8888'
-  #     token: '512ac78f14e1141db1fac17e8b4099c1e5bc7d589518b38c'
+  jupyter: true
+#  jupyter:
+#    server:
+#      url: 'http://localhost:8888'
+#      token: '512ac78f14e1141db1fac17e8b4099c1e5bc7d589518b38c'
   open_access: true
   license: CC-BY-4.0
   banner: banner.png
