--- a/.markdownlint.yml
+++ b/.markdownlint.yml
@@ -1,5 +1,6 @@
 default: true
 
 MD013: false # Line length
+MD022: false # Headings should be surrounded by blank lines
 MD033: false # Inline HTML
 MD051: false # Non-resolving link
