some more myst ignore words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "aberrated",
         "apoferritin",
+        "CBED",
         "convolutional",
         "deconvolution",
         "defocus",
@@ -28,27 +29,44 @@
     "cSpell.ignoreWords": [
         "Bigl",
         "Bigr",
+        "DSTEM",
+        "Georgios",
+        "Lewys",
+        "Lomita",
+        "Ophus",
+        "Ribet",
         "SSNR",
+        "Varnavides",
         "XUNR",
         "aiep",
         "arctan",
         "bekkevold",
         "bmatrix",
         "dekkers",
+        "gvarnavides",
+        "ipynb",
         "jmicro",
         "lazic",
+        "lewys",
         "mathcal",
         "mathit",
         "mathrel",
         "mathrm",
+        "meca",
         "mictod",
+        "mystmd",
+        "ncem",
         "nphys",
+        "orcid",
         "ozae",
         "ptycho",
         "qaad",
         "rodenburg",
         "shibata",
         "srep",
-        "ultramic"
+        "steph",
+        "tyrky",
+        "ultramic",
+        "webp"
     ]
 }
