--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
         "unscattered",
         "upsampled",
         "upsampling",
+        "usecases",
         "wavefunction",
         "wavevector",
         "WPOA",
