--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "HAADF",
         "HRTEM",
         "icom",
+        "nanoscale",
         "Nyquist",
         "planewave",
         "prefactors",
