--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "convolutional",
         "deconvolution",
         "defocus",
+        "defocused",
         "defocuses",
         "fluence",
         "HAADF",
